# Bingohost

./: Cargo.toml  README.md
src/: broadcast.rs  channel.rs  client.rs  config.rs  context.rs  events.rs  gamedata.rs  gamemap.rs  gameroom.rs  gameteam.rs  handshake.rs  main.rs  mapqueue.rs  messageable.rs  player.rs  protocol.rs  requests.rs  roomlist.rs  server.rs  socket.rs  sync.rs
src/handlers/: create_room.rs  generic.rs  mod.rs
src/rest/: auth.rs  tmexchange.rs
src/util/: auth.rs  color.rs  mod.rs  version.rs
src/web/: mod.rs
src/web/static/: main.css
src/web/templates/: roomlist.hbs
