[package]
name = "bingohost"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
rand = "0.8.5"
reqwest = { version = "0.11.13", features = ["json", "multipart"] }
serde = { version = "1.0.148", features = ["serde_derive"] }
serde_json = "1.0.89"
serde_repr = "0.1.9"
thiserror = "1.0.37"
tokio = { version = "1.22.0", features = ["net", "io-util", "rt", "macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
