[package]
name = "bingohost"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
generational-arena = "0.2.8"
rand = "0.8.5"
reqwest = { version = "0.11.13", features = ["json", "multipart"] }
serde = { version = "1.0.148", features = ["serde_derive"] }
serde_json = "1.0.89"
serde_repr = "0.1.9"
thiserror = "1.0.37"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tokio = { version = "1.23.0", features = ["full"] }

# Depend on a patched tokio runtime to fix inconvenient trait implementations
[patch.crates-io]
tokio = { git = "https://github.com/Geekid812/tokio", branch = "tokio-1.23.x"}
